--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,20 @@
-name: WakaTime Readme
-
+name: Update gist with WakaTime stats
 on:
-  push:
-    branches:
-      - master
   schedule:
-    - cron: '0 19 * * *'
-
+    - cron: "0 0 * * *"
+  # Manual triggers with workflow_dispatch
+  push:
+    branches: 
+      - master
+  workflow_dispatch:
 jobs:
-  update-readme:
+  update-gist:
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
-        with:
+      - uses: actions/checkout@master
+      - name: Update gist
+        uses: matchai/waka-box@master
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIST_ID: 0989f27c92446e69484582ea7088e8c8
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
