--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -21,3 +21,4 @@ jobs:
           SHOW_SHORT_INFO: False
           SHOW_LINES_OF_CODE: True
           SHOW_PROFILE_VIEWS: False
+          SHOW_OS: True
